# one-billion-row-challenge

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  analyze.c  analyze.cpp  analyze_improved.c  analyze_stackstrings.c  analyze_v1.c  analyze_v2.c  analyze_v3.c  analyze_v4.c  create_measurements.c  main.c
cmake/: Findcriterion.cmake  Findmatlibr.cmake  Findopenblas.cmake  Findyatpool.cmake
scripts/: build.sh  setup_dependencies.sh
src/: args.c  args.h  dtypes.c  dtypes.h  format.c  format.h  generate_data.c  generate_data.h  hash_table.c  hash_table.h  io_utils.c  io_utils.h  linked_list.c  linked_list.h
tests/: CMakeLists.txt  test_hash_table.c  test_linked_list.c
